traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:7: error: '=' expected but ';' found.
  var x0 ; y0 = getX() ;getY()
         ^